--- a/python/config.yml
+++ b/python/config.yml
@@ -1,6 +1,8 @@
-- ftp: {}
-  http:
-    host: 0.0.0.0
+- global:
+    ftp_host: 0.0.0.0
+    ftp_port: '21'
+    http_host: 0.0.0.0
+    http_port: '4444'
     path: D:/dir/dir
-    port: '4444'
     token: '123456'
+  user: {}
