--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /README.md
     translation: /README_%locale%.md
+  - source: /php/i18n/zh_cn.php
+    translation: /php/i18n/%locale%.php
