--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 /python/build
 /python/dist
 /python/config.yml
-php/config/Reported
-php/.vscode/settings.json
+/php/config/Reported
+/php/.vscode/settings.json
+/python/testfile
+/python/config.yml
